[package]
name = "imgui-app"
version = "0.1.0"
authors = ["Dominik Gschwind <dominik.gschwind99@gmail.com>"]
edition = "2018"

[dependencies]
winit = "~0.22.2"
imgui-wgpu = { git = "https://github.com/N3xed/imgui-wgpu-rs" }
wgpu = "~0.5.2"
imgui = "~0.4.0"
imgui-sys = "~0.4.0"
imgui-winit-support = "~0.4.0"
log = { version = "~0.4.11", features = ["max_level_debug", "release_max_level_info", "std"] }
futures = "~0.3.5"
simplelog = "~0.8.0"

[patch.crates-io]
imgui = {git = "https://github.com/N3xed/imgui-rs"}
