[package]
name = "imgui-app"
version = "0.1.0"
authors = ["Dominik Gschwind <dominik.gschwind99@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.22"
imgui-wgpu = { git = "https://github.com/N3xed/imgui-wgpu-rs", branch = "better-texture-support" }
wgpu = "0.6"
imgui = { git = "https://github.com/Gekkio/imgui-rs.git" }
imgui-winit-support = "0.4"
log = "0.4"
futures = "0.3"

[patch.crates-io]
imgui = { git = "https://github.com/Gekkio/imgui-rs.git" }
